--- a/src/pages/photo.astro
+++ b/src/pages/photo.astro
@@ -57,6 +57,7 @@ console.log(id, url);
 </Layout>
 
 <!-- http://localhost:4321/photo?id=nfkuhsrwtl1kkqaova1x -->
+<!-- http://localhost:4321/photo?id=e52nnnclj5yljftbmqu9 -->
 
 <style>
     main {
@@ -99,6 +100,7 @@ console.log(id, url);
       const url = getCldImageUrl({
         src: id,
         replaceBackground: TOPICS[topic],
+        // ctrl + espacio 
       })
 
       preview.style.opacity = "3"
